express module hands on practice

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "dependencies": {
+    "express": "^4.17.1",
     "nodemon": "^2.0.15"
   },
   "name": "first-nodejs-program",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
